@@ -39,6 +39,9 @@ static size_t max_algo_digest_size = 0;
 tsig_lookup_algorithm_table tsig_supported_algorithms[] = {
 	{ TSIG_HMAC_MD5, "hmac-md5" },
 	{ TSIG_HMAC_SHA1, "hmac-sha1" },
+#ifdef SHA256_DIGEST_LENGTH
+	{ TSIG_HMAC_SHA256, "hmac-sha256" },
+#endif
         { 0, NULL }
 };
 
